fix: z-index issue in navbar, backdrop and content had the same z-index which caused a wrong rendering order in firefox [OLT-4323]
Approved-by: Ivan Drinchev <drinchev+osram@gmail.com>
Approved-by: Johannes Kettmann <johannes.kettmann@gmail.com>

--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -89,7 +89,9 @@
       right: 0;
       bottom: 0;
       background: $navbar-backdrop;
-      z-index: $navbar-content-z;
+      // make sure that the backdrop is below the content,
+      // having both elements (backdrop + content) on z-index 1000 causes the backdrop to be rendered above the content on firefox (not chrome)
+      z-index: #{$navbar-content-z - 1};
       display: none;
     }
 
